# CFGAA

./: .gitignore  README.md
Lecture10Qt/MainWindowExtended/: MainWindow.pro
Lecture10Qt/Qt1/: Qt1.pro  main.cpp
Lecture10Qt/Qt2/: MainWindow.pro  main.cpp
Lecture10Qt/Web/: MainWindow.cpp  MainWindow.pro
Lecture1Introduction/: HelloWorld.cpp  README.md
Lecture1Introduction/Modules/: CMakeLists.txt  Makefile.linux  MultiFile.pro  external.cpp  external.h  main.cpp  module1.cpp
Lecture2BasicCPP/: array.cpp  array2.cpp  array3.cpp  enum1.cpp  enum2.cpp  enum3.cpp  floatArray.cpp  lambda.cpp  lambda1.cpp  namespace1.cpp  namespace2.cpp  namespace3.cpp  namespace4.cpp  pack.cpp  sizeof.c  stdarray.cpp  struct1.cpp  struct2.cpp  struct3.cpp  typedef.cpp  union1.cpp  using.cpp
Lecture5Classes/Colour/: CMakeLists.txt  Colour.pro  ColourTests.pri  Smart.pro
Lecture5Classes/Colour/Automatic/: Automatic.pro  main.cpp
Lecture5Classes/Colour/Dynamic/: Dynamic.pro  main.cpp
Lecture5Classes/Colour/include/: Colour.h
Lecture5Classes/Colour/src/: Colour.cpp  Smart.cpp  main.cpp
Lecture5Classes/Colour/tests/: ColourTests.pro
Lecture5Classes/Memory/: Mem.pro
Lecture5Classes/Singleton/: CMakeLists.txt  Singleton.pro  config.txt
Lecture5Classes/Singleton/include/: Global.h
Lecture5Classes/Singleton/src/: Global.cpp  Test.cpp  Test2.cpp
Lecture6Inheritance/AbstractClass/: example1.cpp  example2.cpp  example3.cpp
Lecture6Inheritance/ConstructorInheritance/: example1.cpp  example2.cpp
Lecture6Inheritance/Final/: example1.cpp
Lecture6Inheritance/MethodInheritance/: example1.cpp  example2.cpp  example3.cpp
Lecture6Inheritance/Mismatch/: example1.cpp
Lecture6Inheritance/Shape/: Rectangle.pro  Shape.pro
Lecture7DesignPatterns/Adaptor/: CMakeLists.txt  adapter.cpp  adapter.h  adaptor.pro  main.cpp  original.cpp  original.h
Lecture7DesignPatterns/CommandPattern/: CMakeLists.txt  Command.pro
Lecture7DesignPatterns/Composite/: CMakeLists.txt  Composite  Composite.h  Composite.pro  main.cpp
Lecture7DesignPatterns/ExtensibleFactory/: CMakeLists.txt  DirectXRenderer.h  Factory  Factory.pro  GLES.h  OpenGLRenderer.h  RenderFactory.cpp  RenderFactory.h  Renderer.h  main.cpp
Lecture7DesignPatterns/Flyweight/: CMakeLists.txt  Flyweight.pro  Terrain.h  World.h  main.cpp
Lecture7DesignPatterns/Observer/: CMakeLists.txt  DivObserver.h  ModObserver.h  Observer.h  Observer.pro  Subject.h  main.cpp
Lecture7DesignPatterns/PIMPLBad/: autotimer.cpp  autotimer.h  main.cpp  pimpl.pro
Lecture7DesignPatterns/PIMPLGood/: CMakeLists.txt  autotimer.cpp  autotimer.h  main.cpp  pimpl
Lecture7DesignPatterns/PIMPLSmartptr/: autotimer.cpp  autotimer.h  main.cpp  pimpl  pimpl.pro
Lecture7DesignPatterns/Prototype/: CMakeLists.txt  Prototype  Prototype.h  Prototype.pro  main.cpp
Lecture7DesignPatterns/SimpleFactory/: CMakeLists.txt  DirectXRenderer.h  Factory.pro  OpenGLRenderer.h  RenderFactory.cpp  RenderFactory.h  Renderer.h  main.cpp
Lecture7DesignPatterns/Singleton11/: singleton.cpp
Lecture7DesignPatterns/StatePattern/: CMakeLists.txt  State.h  StatePattern  StatePattern.pro  main.cpp
Lecture7DesignPatterns/Texture/: CMakeLists.txt  Texture.cpp  Texture.h  Texture.pro  main.cpp
Lecture7DesignPatterns/Visitor/: CMakeLists.txt  Visitor  Visitor.pro  Visitors.h  main.cpp
Lecture7DesignPatterns/monostate/: CMakeLists.txt  Config.cpp  Config.h  Monostate.pro  main.cpp
Lecture8OperatorOverloading/: OverloadTest.pro
Lecture8OperatorOverloading/include/: Vec3.h
Lecture8OperatorOverloading/src/: Vec3.cpp  main.cpp
MemoryAndPointers/: address.c  address.cpp  array.c  array.cpp  array2.c  array3.c  brk.c  doublefree.c  floatArray.c  func.c  functionstack.cpp  makeUnique.cpp  malloc2.c  mem1.c  mem2.c  mem5.c  memcpy.c  new.cpp  newnothrow.cpp  point.h  pointer1.c  ptrAdd.c  ptrToArray.c  ptrToArray.cpp  realloc.c  recures.c  recurse.cpp  sizeof.c  sizeof.cpp  smartArray.cpp  swap.c  swap.cpp  trace.c  voidPtr.c
(+49 files in other folders)
